Fix misalignment of cell content with headers

--- a/BlazorGrid/Styles/BlazorGrid.scss
+++ b/BlazorGrid/Styles/BlazorGrid.scss
@@ -1,3 +1,7 @@
+/**
+    Part of Akinzekeel.BlazorGrid
+    Last updated for version 0.2.2-beta
+**/
 @import "Variables";
 @import "Empty";
 @import "Loading";
@@ -20,6 +24,7 @@
         > * {
             padding: $layout-spacing;
             border-bottom: 1px solid $component-hover-color;
+            border-left: 2px solid $bg-color;
         }
 
         &.grid-header {
@@ -29,7 +34,6 @@
                 top: 0;
                 position: sticky;
                 white-space: nowrap;
-                border-left: 2px solid $bg-color;
                 background: $bg-color;
                 z-index: 10;
                 font-weight: bold;
